# research-software-engineering

./: .buildinfo  .gitignore  README.md  index.html  objects.inv  presentation.css  presentation.md  requirements.txt  searchindex.js
.github/workflows/: sphinx.yml
_sources/: automation.md.txt  cmake.md.txt  containers.md.txt  example.md.txt  index.rst.txt  version-control-documentation.md.txt  version-control.md.txt
automation/: index.html
cmake/: index.html
containers/: index.html
content/: automated-testing.md  automation.md  cmake.md  conf.py  containers.md  documentation.md  example.md  index.md  index.rst  reproducibility.md  sharing-reusing.md  sharing.md  testing.md  version-control-documentation.md  version-control.md
content/cmake/configure-file/problem/: config-template.h  example.cpp
content/cmake/configure-file/solution/: CMakeLists.txt  config-template.h  example.cpp
content/cmake/hello-executable/cxx/: CMakeLists.txt  hello.cpp
content/cmake/hello-executable/fortran/: CMakeLists.txt  hello.f90
content/cmake/os-dependent/: CMakeLists.txt
content/containers/: bad-example-cxx.def  bad-example-python.def  build-all.sh  environment.yml  example.py  hello.def  hello.out  ngstools.def  run-conda.sh  run-hello.sh  run-ngstools.sh
documentation/: index.html
example/: index.html
genindex/: index.html
reproducibility/: index.html
search/: index.html
sharing/: index.html
sharing-reusing/: index.html
testing/: index.html
version-control/: index.html
version-control-documentation/: index.html
(+14 files in other folders)
